tests/error/match/fail.mml
match 3 with | 4 -> ()
